--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>Public::Posts#edit</h1>
-<p>Find me in app/views/public/posts/edit.html.erb</p>
+<div class="container">
+ <div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
+    <h1>Editing Book</h1>
+
+    <% if @post.errors.any? %>
+    <h3><%= @post.errors.count %>errors prohibited this obj from being saved:</h3>
+    <ul>
+      <% @post.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+      <% end %>
+     </ul>
+    <% end %>
+        <%= form_with model: @post,url: public_post_path do |f| %>
+        <div class="form-group">
+          <p>Title</p>
+          <%= f.text_field :title, class: "form-control post_title" %>
+        </div>
+        <div class="form-group">
+          <p>Opinion</p>
+          <%= f.text_area :opinion, class: "form-control post_body" %>
+        </div>
+        <div class="form-group">
+         <%= f.submit 'Update Book', class: "btn btn-success" %>
+        </div>
+        <% end %>
+      <%= link_to "Show",public_post_path(@post) %>
+      |
+      <%= link_to "Back",public_posts_path %>
+  </div>
+ </div>
+</div>
