--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Public::Posts#index</h1>
-<p>Find me in app/views/public/posts/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%= render 'side', user: @user, post: @post %>
+    <div class="col-md-8 offset-md-1">
+      <table class="table">
+        <tbody>
+          <% @posts.each do |post| %>
+          <tr>
+            <td>
+            <%= link_to public_user_path(post.user) do %>
+              image
+            <% end %>
+            </td>
+            <td><%= link_to post.title, public_post_path(post.id) %></td>
+            <td><%= post.opinion %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
