--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,2 +1,33 @@
-<h1>Public::Users#edit</h1>
-<p>Find me in app/views/public/users/edit.html.erb</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h2>User info</h2>
+
+    <% if @user.errors.any? %>
+     <h3><%= @user.errors.count %>errors prohibited this obj from being saved:</h3>
+     <ul>
+       <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+     </ul>
+    <% end %>
+        <%= form_with model: @user,url: public_user_path(@user) do |f| %>
+        <div class="form-group">
+          <p>Name</p>
+          <%= f.text_field :name, class: "form-control " %>
+        </div>
+        <div class="form-group">
+          <p>Image</p>
+          <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+        </div>
+        <div class="form-group">
+          <p>Introduction</p>
+          <%= f.text_area :introduction, class: "form-control " %>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Update User', class: "btn btn-secondary" %>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
