--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Public::Users#index</h1>
-<p>Find me in app/views/public/users/index.html.erb</p>
+ <div class="container px-5 px-sm-0">
+   <div class="row">
+     <%= render 'side', user: @user, post: @post %> <!--menter-->
+     <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table">
+        <thead>
+         <tr>
+          <th>image</th>
+          <th>name</th>
+          <th colspan="3"></th>
+         </tr>
+        </thead>
+        <tbody>
+        <% @users.each do |user| %>
+         <tr>
+          <td>
+           <%= image_tag post.get_post_image(100,100) %>
+           </td>
+          <td><%= user.name %></td>
+          <td><%= link_to "Show", public_user_path(user.id) %></td>
+         </tr>
+         <% end %>
+        </tbody>
+      </table>
+     </div>
+   </div>
+  </div>
