--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,30 @@
-<h1>Public::Users#show</h1>
-<p>Find me in app/views/public/users/show.html.erb</p>
+  <div class="container px-5 px-sm-0">
+    <div class="row">
+      <%= render 'side', user: @finduser, post: @post %>
+      <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+           <% @posts.each do |post| %>
+            <tr>
+              <td>
+              <%= link_to public_user_path(post.user_id) do%>
+                <%= image_tag post.get_post_image(100,100) %>
+              <% end %>
+              </td>
+              <td><%= link_to post.title, public_post_path(post.id) %></td>
+              <td><%= post.opinion %></td>
+            </tr>
+           <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
