--- a/app/views/public/posts/_side.html.erb
+++ b/app/views/public/posts/_side.html.erb
@@ -10,7 +10,29 @@
           <th>introduction</th>
           <th><%= user.introduction %></th>
         </tr>
-        <tr>edit</tr>
+        <tr>
+          <th>
+        　<%= link_to edit_public_user_path(user),class: 'btn btn-outline-secondary btn-block' do %>
+          <i class="fas fa-user-cog"></i>
+          <% end %>
+          </th>
+        </tr>
+        <tr>
+          <td>フォロー数: <%= user.followings.count %></td>
+          <td>フォロワー数: <%= user.followers.count %></td>
+        </tr>
+
+        <% if current_user.following?(user) %>
+        <%= link_to "フォロー外す", public_user_relationships_path(user.id), method: :delete %>
+        <% else %>
+        <%= link_to "フォローする", public_user_relationships_path(user.id), method: :post %>
+        <% end %>
+        <%= link_to "フォロー一覧", public_user_followings_path(user.id) %>
+        <%= link_to "フォロワー一覧", public_user_followers_path(user.id) %>
+
+        <tr>
+          <th><%= link_to "いいねした投稿", favorites_public_user_path(user) %></th>
+        </tr>
       </tbody>
     </table>
     <div class="mt-3">toukou</div>
