--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -13,6 +13,19 @@
             </td>
             <td><%= link_to post.title, public_post_path(post.id) %></td>
             <td><%= post.opinion %></td>
+              <% if post.favorited_by?(current_user) %>
+              <td>
+                <%= link_to public_post_favorites_path(post), method: :delete do %>
+                ♥<%= post.favorites.count %> いいね
+                <% end %>
+              </td>
+              <% else %>
+              <td>
+                <%= link_to public_post_favorites_path(post), method: :post do %>
+                ♡<%= post.favorites.count %> いいね
+                <% end %>
+              </td>
+              <% end %>
           </tr>
           <% end %>
         </tbody>
