--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -9,6 +9,21 @@
             <td><%= @post.user.name %></td>
             <td><%= @post.title %></td>
             <td><%= @post.opinion %></td>
+          <!---------------------いいね機能-------------------------------------->
+            <% if @post.favorited_by?(current_user) %>
+            <td>
+              <%= link_to public_post_favorites_path(@post), method: :delete do %>
+              ♥<%= @post.favorites.count %> いいね
+              <% end %>
+             </td>
+            <% else %>
+            <td>
+              <%= link_to public_post_favorites_path(@post), method: :post do %>
+              ♡<%= @post.favorites.count %> いいね
+              <% end %>
+             </td>
+            <% end %>
+　　　　　<!-------------------------------------------------------------------->
             <td>
               <% if @post.user == current_user %>
                <%= link_to "Edit",edit_public_post_path(@post), class: "btn btn-sm btn-success" %>
