--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,6 +1,6 @@
  <div class="container px-5 px-sm-0">
    <div class="row">
-     <%= render 'side', user: @user, post: @post %> <!--menter-->
+     <%= render 'public/posts/side', user: @user, post: @post %> <!--menter-->
      <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table">
@@ -15,9 +15,16 @@
         <% @users.each do |user| %>
          <tr>
           <td>
-           <%= image_tag post.get_post_image(100,100) %>
+           <%= image_tag user.get_profile_image(100,100) %>
            </td>
           <td><%= user.name %></td>
+          <td>
+          <% if current_user.following?(user) %>
+          <%= link_to "フォロー外す", public_user_relationships_path(user.id), method: :delete %>
+          <% else %>
+          <%= link_to "フォローする", public_user_relationships_path(user.id), method: :post %>
+          <% end %>
+          </td>
           <td><%= link_to "Show", public_user_path(user.id) %></td>
          </tr>
          <% end %>
