--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,6 +1,6 @@
   <div class="container px-5 px-sm-0">
     <div class="row">
-      <%= render 'side', user: @finduser, post: @post %>
+      <%= render 'public/posts/side', user: @finduser, post: @post %>
       <div class="col-md-8 offset-md-1">
         <h2>Books</h2>
         <table class="table table-hover table-inverse">
@@ -21,6 +21,19 @@
               </td>
               <td><%= link_to post.title, public_post_path(post.id) %></td>
               <td><%= post.opinion %></td>
+              <% if post.favorited_by?(current_user) %>
+              <td>
+                <%= link_to public_post_favorites_path(post), method: :delete do %>
+                ♥<%= post.favorites.count %> いいね
+                <% end %>
+              </td>
+              <% else %>
+              <td>
+                <%= link_to public_post_favorites_path(post), method: :post do %>
+                ♡<%= post.favorites.count %> いいね
+                <% end %>
+              </td>
+              <% end %>
             </tr>
            <% end %>
           </tbody>
