--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -2,41 +2,53 @@
   <div class="row">
    <%= render 'side', user: @user, post: @post1 %>
     <div class="col-md-8 offset-md-1">
-      <table class="table">
-        <tbody>
-          <tr>
-            <td><%= image_tag @post.get_post_image(100,100) %></td>
-            <td><%= @post.user.name %></td>
-            <td><%= @post.title %></td>
-            <td><%= @post.opinion %></td>
+
+
+            <%= image_tag @post.get_post_image(100,100) %>
+            <%= @post.user.name %>
+            <%= @post.title %>
+           <%= @post.opinion %>
           <!---------------------いいね機能-------------------------------------->
             <% if @post.favorited_by?(current_user) %>
-            <td>
+
               <%= link_to public_post_favorites_path(@post), method: :delete do %>
               ♥<%= @post.favorites.count %> いいね
               <% end %>
-             </td>
+
             <% else %>
-            <td>
+
               <%= link_to public_post_favorites_path(@post), method: :post do %>
               ♡<%= @post.favorites.count %> いいね
               <% end %>
-             </td>
+
             <% end %>
 　　　　　<!-------------------------------------------------------------------->
-            <td>
+
+　　　　　  <%= render "public/comments/count", post: @post %>
+
               <% if @post.user == current_user %>
                <%= link_to "Edit",edit_public_post_path(@post), class: "btn btn-sm btn-success" %>
               <% end %>
-            </td>
-            <td>
+
+
               <% if @post.user == current_user %>
                <%= link_to "Destroy",public_post_path(@post),method: :delete, class: "btn btn-sm btn-danger" %>
               <% end %>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+
+
+
+            コメント
+            <%= render "public/comments/index",post: @post %>
+
+            <%= form_with model: [@post, @comment],url: public_post_comments_path(@post) do |f| %>
+
+            <%= f.text_area :comment, rows: '5', class: 'w-100 comment-textarea' %>
+            <%= f.submit 'コメントする' %>
+
+            <% end %>
+
+
+
     </div>
   </div>
 </div>
