--- a/app/views/public/users/_favorites.html.erb
+++ b/app/views/public/users/_favorites.html.erb
@@ -1,5 +1,5 @@
 いいね一覧
-<% @favorite_posts.each do |post| %>
+<% favorite_posts.each do |post| %>
  <%= link_to public_user_path(post.user_id) do%>
  <%= image_tag post.get_post_image(100,100) %>
  <% end %>
