--- a/app/views/layouts/_serach.html.erb
+++ b/app/views/layouts/_serach.html.erb
@@ -1,10 +1,12 @@
 <% if user_signed_in? %>
-  <div class="search_form">
+<nav class="navbar navbar-dark bg-dark">
+  <form class="form-inline ">
     <%= form_with url: public_search_path, local: true, method: :get do |f| %>
       <%= f.text_field :word %>
       <%= f.select :range, options_for_select([['User'], ['Post']]) %>
       <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-      <%= f.submit "検索", class: "btn btn-primary" %>
+      <%= f.submit "検索", class: "btn btn-outline-success my-2 my-sm-0" %>
     <% end %>
-  </div>
+  </form>
+</nav>
 <% end %>
