--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,26 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+  <style>
+    @media (min-width: 1200px) {
+      #intro-example {
+        height: 750px;
+        width: 100%;
+      }
+    }
+  </style>
+  <div
+    id="intro-example"
+    class="p-5 text-center bg-image"
+    style="background-image: url('https://images.unsplash.com/photo-1558172474-c86baed4e874?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80');"
+  >
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white">
+          <h1 class="mb-3">Snow man</h1>
+          <h5 class="mb-4">ウィンタースポーツSNS</h5>
+          <%= link_to "新規登録", new_user_registration_path, class: "btn btn-outline-light btn-lg m-2" %>
+          <%= link_to "ログイン", new_user_session_path, class: "btn btn-outline-light btn-lg m-2" %>
+          <%= link_to "ゲストログイン", public_root_path ,class: "btn btn-outline-light btn-lg m-2" %>
+
+        </div>
+      </div>
+    </div>
+  </div>
