--- a/app/views/public/posts/_side.html.erb
+++ b/app/views/public/posts/_side.html.erb
@@ -27,22 +27,20 @@
         <% else %>
         <%= link_to "フォローする", public_user_relationships_path(user.id), method: :post %>
         <% end %>
-        <%= link_to "フォロー一覧", public_user_followings_path(user.id) %>
-        <%= link_to "フォロワー一覧", public_user_followers_path(user.id) %>
-
-        <tr>
-          <th><%= link_to "いいねした投稿", favorites_public_user_path(user) %></th>
-        </tr>
       </tbody>
     </table>
-    <div class="mt-3">toukou</div>
+    <h2 class="mt-3">投稿する</h2>
     <%= form_with model: post,url: public_posts_path do |f| %>
     <div class="form-group">
-      <p>Title</p>
+      <p>Image</p>
+      <%= f.file_field :post_image, placeholder: "post-image", accept: "image/*" %>
+    </div>
+    <div class="form-group">
+      <p>タイトル</p>
       <%= f.text_field :title, class: "form-control post_title" %>
     </div>
     <div class="form-group">
-      <p>body</p>
+      <p>説明</p>
       <%= f.text_area :opinion, class: "form-control post_opinion" %>
     </div>
     <div class="form-group">
