--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -2,35 +2,30 @@
    <div class="row">
      <%= render 'public/posts/side', user: @user, post: @post %> <!--menter-->
      <div class="col-md-8 offset-md-1">
-      <h2>Users</h2>
-      <table class="table">
-        <thead>
-         <tr>
-          <th>image</th>
-          <th>name</th>
-          <th colspan="3"></th>
-         </tr>
-        </thead>
-        <tbody>
-        <% @users.each do |user| %>
-         <tr>
-          <td>
-           <%= image_tag user.get_profile_image(100,100) %>
-           </td>
-          <td><%= user.name %></td>
-          <td>
-          <% if current_user.following?(user) %>
-          <%= link_to "フォロー外す", public_user_relationships_path(user.id), method: :delete %>
-          <% else %>
-          <%= link_to "フォローする", public_user_relationships_path(user.id), method: :post %>
-          <% end %>
-          </td>
-          <td><%= link_to "Show", public_user_path(user.id) %></td>
-          <td><%= link_to "チャットする", public_user_chat_path(current_user.id, user.id) %></td>
-         </tr>
-         <% end %>
-        </tbody>
-      </table>
+
+     <ul class="nav nav-tabs">
+     <li class="active"><a class="nav-link" href="#users" data-toggle="tab">ユーザー一覧</a></li>
+     <li class="nav-item"><a class="nav-link" href="#follower" data-toggle="tab">フォロワー一覧</a></li>
+     <li class="nav-item"><a class="nav-link" href="#follow" data-toggle="tab">フォロー一覧</a></li>
+     <li class="nav-item"><a class="nav-link" href="#favorite" data-toggle="tab">いいね一覧</a></li>
+     </ul>
+     <div class="tab-content">
+     <div class="tab-pane fade" id="users">
+      <%= render "public/users/index", users: @users %>
+     </div>
+     <div class="tab-pane fade" id="follower">
+      <%= render 'public/relationships/follow_list', users: @users2 %>
+     </div>
+     <div class="tab-pane fade" id="follow">
+      <%= render 'public/relationships/follow_list', users: @users1 %>
+     </div>
+     <div class="tab-pane fade" id="favorite">
+      <%= render 'public/users/favorites', favorite_posts: @favorite_posts %>
+     </div>
+     </div>
+
+
      </div>
    </div>
   </div>
+
