--- a/app/views/public/comments/_index.html.erb
+++ b/app/views/public/comments/_index.html.erb
@@ -1,7 +1,7 @@
 <% post.comments.each do |comment| %>
 <tr>
   <td>
-    <%= link_to public_user_path(current_user) do %>
+    <%= link_to public_user_path(comment.user) do %>
     <%= image_tag comment.user.get_profile_image(50,50)%><br>
     <%= comment.user.name %>
     <% end %>
@@ -12,6 +12,5 @@
   <% if comment.user == current_user %>
   <%= link_to "削除", public_post_comment_path(comment.post.id, comment.id),method: :delete, class: "btn btn-danger" %>
   <% end %>
-
 </tr>
 <% end %>
