--- a/app/views/public/posts/_side.html.erb
+++ b/app/views/public/posts/_side.html.erb
@@ -3,11 +3,11 @@
        <tbody>
         <%= image_tag user.get_profile_image(100,100) %>
          <tr>
-          <th>name</th>
+          <th>名前</th>
           <th><%= user.name %></th>
         </tr>
          <tr>
-          <th>introduction</th>
+          <th>自己紹介</th>
           <th><%= user.introduction %></th>
         </tr>
         <tr>
@@ -32,7 +32,7 @@
     <h2 class="mt-3">投稿する</h2>
     <%= form_with model: post,url: public_posts_path do |f| %>
     <div class="form-group">
-      <p>Image</p>
+      <p>投稿画像</p>
       <%= f.file_field :post_image, placeholder: "post-image", accept: "image/*" %>
     </div>
     <div class="form-group">
@@ -44,7 +44,8 @@
       <%= f.text_area :opinion, class: "form-control post_opinion" %>
     </div>
     <div class="form-group">
-      <%= f.submit "ツイート", class: "btn btn-success"%>
+      <%= f.submit "ツイート", class: "btn btn-success" %>
     </div>
     <% end %>
+    <%= link_to '前の画面に戻る', :back, class: "btn btn-success" %>
   </div>
