--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <%= render 'side', user: @user, post: @post %>
     <div class="col-md-8 offset-md-1">
+      <h2>投稿一覧</h2>
       <table class="table">
         <tbody>
           <% @posts.each do |post| %>
@@ -9,10 +10,12 @@
             <td>
             <%= link_to public_user_path(post.user) do %>
               <%= image_tag post.get_post_image(100,100) %>
+              <%= post.user.name %>
             <% end %>
             </td>
             <td><%= link_to post.title, public_post_path(post.id) %></td>
             <td><%= post.opinion %></td>
+            
               <% if post.favorited_by?(current_user) %>
               <td>
                 <%= link_to public_post_favorites_path(post), method: :delete do %>
@@ -26,6 +29,7 @@
                 <% end %>
               </td>
               <% end %>
+              
           </tr>
           <% end %>
         </tbody>
