--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -2,29 +2,16 @@
   <div class="row">
    <%= render 'side', user: @user, post: @post1 %>
     <div class="col-md-8 offset-md-1">
-
+          <h2>投稿詳細</h2>
 
             <%= image_tag @post.get_post_image(100,100) %>
             <%= @post.user.name %>
             <%= @post.title %>
            <%= @post.opinion %>
-          <!---------------------いいね機能-------------------------------------->
-            <% if @post.favorited_by?(current_user) %>
 
-              <%= link_to public_post_favorites_path(@post), method: :delete do %>
-              ♥<%= @post.favorites.count %> いいね
-              <% end %>
+           <%= render "public/favorites/favorite", post: @post %>
 
-            <% else %>
-
-              <%= link_to public_post_favorites_path(@post), method: :post do %>
-              ♡<%= @post.favorites.count %> いいね
-              <% end %>
-
-            <% end %>
-　　　　　<!-------------------------------------------------------------------->
-
-　　　　　  <%= render "public/comments/count", post: @post %>
+           <%= render "public/comments/count", post: @post %>
 
               <% if @post.user == current_user %>
                <%= link_to "Edit",edit_public_post_path(@post), class: "btn btn-sm btn-success" %>
