--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Posts#index</h1>
-<p>Find me in app/views/admin/posts/index.html.erb</p>
+      <h2>投稿一覧</h2>
+      <table class="table">
+        <tbody>
+          <% @posts.each do |post| %>
+          <tr>
+            <td>
+            <%= link_to public_user_path(post.user) do %>
+              <%= image_tag post.get_post_image(100,100) %>
+              <%= post.user.name %>
+            <% end %>
+            </td>
+            <td><%= link_to post.title, public_post_path(post.id) %></td>
+            <td><%= post.opinion %></td>
+            <td><%= link_to "削除", admin_post_path(post.id),method: :delete, class: "btn btn-sm btn-danger" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
