--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
+      <table class="table">
+        <tbody>
+        <% @users.each do |user| %>
+         <tr>
+          <td>
+           <%= image_tag user.get_profile_image(100,100) %>
+           </td>
+          <td><%= user.name %></td>
+          <td><%= link_to "削除",admin_user_path(user.id), method: :delete, class: "btn btn-sm btn-danger" %> </td>
+          <!--destroyアクションをしたときにアソシエーションのエラー-->
+         </tr>
+         <% end %>
+        </tbody>
+      </table>
