--- a/app/views/public/comments/_index.html.erb
+++ b/app/views/public/comments/_index.html.erb
@@ -1,16 +1,16 @@
 <% post.comments.each do |comment| %>
 <tr>
-  <td>
+<td>
     <%= link_to public_user_path(comment.user) do %>
     <%= image_tag comment.user.get_profile_image(50,50)%><br>
     <%= comment.user.name %>
     <% end %>
-  </td>
-  <td>
-    <%= comment.comment %>
-  </td>
+</td>
+<td><%= comment.comment %></td>
+<td>
   <% if comment.user == current_user %>
-  <%= link_to "削除", public_post_comment_path(comment.post.id, comment.id),method: :delete, class: "btn btn-danger" %>
+  <%= link_to "削除", public_post_comment_path(comment.post.id, comment.id),method: :delete, class: "btn btn-danger", remote: true %>
   <% end %>
+</td>
 </tr>
 <% end %>
