--- a/app/views/public/favorites/_favorite.html.erb
+++ b/app/views/public/favorites/_favorite.html.erb
@@ -1,10 +1,10 @@
           <!---------------------いいね機能-------------------------------------->
             <% if post.favorited_by?(current_user) %>
-              <%= link_to public_post_favorites_path(post), method: :delete do %>
+              <%= link_to public_post_favorites_path(post), method: :delete, remote: true do %>
               ♥<%= post.favorites.count %> いいね
               <% end %>
             <% else %>
-              <%= link_to public_post_favorites_path(post), method: :post do %>
+              <%= link_to public_post_favorites_path(post), method: :post, remote: true do %>
               ♡<%= post.favorites.count %> いいね
               <% end %>
             <% end %>
