--- a/app/views/public/relationships/_follow_list.html.erb
+++ b/app/views/public/relationships/_follow_list.html.erb
@@ -9,11 +9,15 @@
           <td>フォロー数: <%= user.followings.count %></td>
           <td>フォロワー数: <%= user.followers.count %></td>
           <td>
+          
+          <div id="follow_list">
           <% if current_user.following?(user) %>
-          <%= link_to "フォロー外す", public_user_relationships_path(user.id), method: :delete %>
+          <%= render "public/relationships/unfollow",user: user %>
           <% else %>
-          <%= link_to "フォローする", public_user_relationships_path(user.id), method: :post %>
+          <%= render "public/relationships/follow",user: user %>
           <% end %>
+          </div>
+          
           </td>
         </tr>
       </tbody>
