--- a/app/views/public/users/_favorites.html.erb
+++ b/app/views/public/users/_favorites.html.erb
@@ -10,17 +10,10 @@
  </td>
  <td><%= link_to post.title, public_post_path(post.id) %></td>
  <td><%= post.opinion %></td>
-
- <td>
-  <% if post.favorited_by?(current_user) %>
-   <%= link_to public_post_favorites_path(post), method: :delete do %>
-    ♥<%= post.favorites.count %> いいね
-   <% end %>
-  <% else %>
-   <%= link_to public_post_favorites_path(post), method: :post do %>
-    ♡<%= post.favorites.count %> いいね
-   <% end %>
-  <% end %>
+ 
+　　<!--非同期通信いいね-->
+ <td id="favorite_buttons_<%= post.id %>">
+ <%= render "public/favorites/favorite", post: post %>
  </td>
 
  </tr>
