--- a/app/views/public/relationships/destroy.js.erb
+++ b/app/views/public/relationships/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#follow_list").html("<%= j(render "public/relationships/unfollow") %>");
+$(".follow_list_<%= @user.id %>").html("<%= j(render "public/relationships/unfollow",user: @user) %>");
