--- a/app/views/public/posts/_side.html.erb
+++ b/app/views/public/posts/_side.html.erb
@@ -21,11 +21,14 @@
           <td>フォロー数: <%= user.followings.count %></td>
           <td>フォロワー数: <%= user.followers.count %></td>
         </tr>
-
-        <% if current_user.following?(user) %>
-        <%= link_to "フォロー外す", public_user_relationships_path(user.id), method: :delete %>
-        <% else %>
-        <%= link_to "フォローする", public_user_relationships_path(user.id), method: :post %>
+        <% unless user.id == current_user.id %>
+        <tr>
+          <td>
+           <div class="follow_list_<%= user.id %>">
+            <%= render partial: "public/relationships/follow", locals: {user: user} %>
+           </div>
+          </td>
+        </tr>
         <% end %>
       </tbody>
     </table>
