--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -1,1 +1,8 @@
-<%= link_to "フォローする", public_user_relationships_path(user.id), method: :post, remote: true %>
+ <% if current_user.following?(user) %>
+  <%= link_to "フォロー外す", public_user_relationships_path(user.id), method: :delete, remote: true %>
+ <% else %>
+  <%= link_to "フォローする", public_user_relationships_path(user.id), method: :post, remote: true %>
+<% end %>
+
+
+
