--- a/app/views/public/relationships/_follow_list.html.erb
+++ b/app/views/public/relationships/_follow_list.html.erb
@@ -9,15 +9,11 @@
           <td>フォロー数: <%= user.followings.count %></td>
           <td>フォロワー数: <%= user.followers.count %></td>
           <td>
-          
-          <div id="follow_list">
-          <% if current_user.following?(user) %>
-          <%= render "public/relationships/unfollow",user: user %>
-          <% else %>
-          <%= render "public/relationships/follow",user: user %>
-          <% end %>
+
+          <div class="follow_list_<%= user.id %>">
+            <%= render partial: "public/relationships/follow", locals: {user: user} %>
           </div>
-          
+
           </td>
         </tr>
       </tbody>
