--- a/app/views/public/relationships/create.js.erb
+++ b/app/views/public/relationships/create.js.erb
@@ -1,1 +1,1 @@
-$("#follow_list").html("<%= j(render "public/relationships/follow") %>");
+$(".follow_list_<%= @user.id %>").html("<%= j(render partial: "public/relationships/follow", locals: {user: @user} ) %>");
