--- a/app/views/public/users/_show.html.erb
+++ b/app/views/public/users/_show.html.erb
@@ -9,19 +9,9 @@
               </td>
               <td><%= link_to post.title, public_post_path(post.id) %></td>
               <td><%= post.opinion %></td>
-              <% if post.favorited_by?(current_user) %>
-              <td>
-                <%= link_to public_post_favorites_path(post), method: :delete do %>
-                ♥<%= post.favorites.count %> いいね
-                <% end %>
+              <td id="favorite_buttons_<%= post.id %>">
+                <%= render "public/favorites/favorite", post: post %>
               </td>
-              <% else %>
-              <td>
-                <%= link_to public_post_favorites_path(post), method: :post do %>
-                ♡<%= post.favorites.count %> いいね
-                <% end %>
-              </td>
-              <% end %>
             </tr>
            <% end %>
           </tbody>
