--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -4,13 +4,13 @@
     <div class="col-md-8 offset-md-1">
 
      <ul class="nav nav-tabs">
-      <li class="active"><a class="nav-link" href="#post" data-toggle="tab">投稿</a></li>
+      <li class="nav-item active"><a class="nav-link" href="#post" data-toggle="tab">投稿</a></li>
       <li class="nav-item"><a class="nav-link" href="#follower" data-toggle="tab">フォロワー一覧</a></li>
       <li class="nav-item"><a class="nav-link" href="#follow" data-toggle="tab">フォロー一覧</a></li>
       <li class="nav-item"><a class="nav-link" href="#favorite" data-toggle="tab">いいね一覧</a></li>
      </ul>
      <div class="tab-content">
-     <div class="tab-pane fade" id="post">
+     <div class="tab-pane fade active show" id="post">
      <%= render 'public/users/show', posts: @posts %>
      </div>
      <div class="tab-pane fade" id="follower">
