--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,10 +21,10 @@
               <%= link_to "TOP", admin_root_path, class: 'btn btn-sm btn-outline-secondary nav-link text-white' %>
             </li>
             <li class="nav-item mr-3">
-              <%= link_to "ユーザー一覧", admin_users_index_path, class: 'btn btn-sm btn-outline-secondary nav-link text-white' %>
+              <%= link_to "ユーザー一覧", admin_users_path, class: 'btn btn-sm btn-outline-secondary nav-link text-white' %>
             </li>
             <li class="nav-item mr-3">
-              <%= link_to "投稿一覧", public_posts_index_path, class: 'btn btn-sm btn-outline-secondary nav-link text-white' %>
+              <%= link_to "投稿一覧", admin_posts_path, class: 'btn btn-sm btn-outline-secondary nav-link text-white' %>
             </li>
             <% else %>
             <li class="nav-item mr-3">
