--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,9 @@
             <li class="nav-item mr-3">
               <%= link_to "投稿一覧", admin_posts_path, class: 'btn btn-sm btn-outline-secondary nav-link text-white' %>
             </li>
+            <li class="nav-item mr-3">
+              <%= link_to "ログアウト", destroy_admin_session_path,method: :delete, class: 'btn btn-sm btn-outline-secondary nav-link text-white' %>
+            </li>
             <% else %>
             <li class="nav-item mr-3">
               <%= link_to "TOP", public_root_path, class: 'btn btn-sm btn-outline-secondary nav-link text-white' %>
