--- a/app/views/public/users/_index.html.erb
+++ b/app/views/public/users/_index.html.erb
@@ -16,8 +16,16 @@
           <% end %>
           </td>
 
-          <td><%= link_to "Show", public_user_path(user.id) %></td>
-          <td><%= link_to "チャットする", public_user_chat_path(current_user.id, user.id) %></td>
+          <td><%= link_to "このユーザーを見る", public_user_path(user.id) %></td>
+
+          <td>
+          <% unless user.id == current_user.id %>
+          <%= link_to public_user_chat_path(current_user.id, user.id) do %>
+          <button type="button" class="btn btn-secondary">chat</button>
+          <% end %>
+          <% end %>
+          </td>
+
          </tr>
          <% end %>
         </tbody>
