--- a/app/views/public/posts/_side.html.erb
+++ b/app/views/public/posts/_side.html.erb
@@ -17,7 +17,7 @@
           <i class="fas fa-user-cog"></i>
           <% end %>
           </th>
-        <% end %>
+        <% end %>#
         </tr>
         <tr>
           <td>フォロー数: <%= user.followings.count %></td>
