--- a/app/views/public/relationships/destroy.js.erb
+++ b/app/views/public/relationships/destroy.js.erb
@@ -1,1 +1,3 @@
 $(".follow_list_<%= @user.id %>").html("<%= j(render "public/relationships/unfollow",user: @user) %>");
+<!--タブ間での非同期通信（タブ切り替えの際に更新されるようにするため）-->
+$('#follow').html("<%= j(render 'public/relationships/follow_list', users: @users1) %>");
