--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
  <div class="row">
   <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
-    <h1>Editing Book</h1>
+    <h1>投稿編集画面</h1>
 
     <% if @post.errors.any? %>
     <h3><%= @post.errors.count %>errors prohibited this obj from being saved:</h3>
